--- a/README
+++ b/README
@@ -1,7 +1,12 @@
 Проект по КС. Пособин Глеб, группа 141.
 Задачи ко второй контрольной точке:
 1) Модифицировать exec, чтобы он мог выполнять «скрипты». — сделано
-2) Сделать системную функцию mkfifo(), которая создаёт файл, выступающий в качестве пайпа для программ — программы рассматривают этот файл как обычный файл, но на диске он места не занимает. Одна программа записывает в него данные, вторая тут же читает. Либо одна из программ ждёт, пока вторая сделает положенное ей действие (считает или запшишет данные).
+2) Сделать системную функцию mkfifo(), которая создаёт файл,
+выступающий в качестве пайпа для программ — программы рассматривают
+этот файл как обычный файл, но на диске он места не занимает. Одна
+программа записывает в него данные, вторая тут же читает. Либо одна
+из программ ждёт, пока вторая сделает положенное ей действие
+(считает или запшишет данные).
 
 Дальше оригинальный Readme:
 
