README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,12 +1,59 @@
 Проект по КС. Пособин Глеб, группа 141.
-Задачи ко второй контрольной точке:
-1) Модифицировать exec, чтобы он мог выполнять «скрипты». — сделано
-2) Сделать системную функцию mkfifo(), которая создаёт файл,
-выступающий в качестве пайпа для программ — программы рассматривают
-этот файл как обычный файл, но на диске он места не занимает. Одна
-программа записывает в него данные, вторая тут же читает. Либо одна
-из программ ждёт, пока вторая сделает положенное ей действие
-(считает или запшишет данные).
+
+Добавлено: exec для скриптов, mkfifo, пользователи.
+
+1. #!/bin/ls
+Добавлена проверка файла на #! в начале, в таком случае сплитим первую строку
+файла по пробелам, первый токен — имя интерпретатора, последующие — его аргументы
+(в линуксе это сделано немного иначе, он сплитит только по первому пробелу,
+все аргумены склеивает в один. Но стандарта по #! нет, OS X делает как я, например
+(http://mail-index.netbsd.org/netbsd-users/2008/11/09/msg002388.html)).
+Ещё добавляем в аргументы имя вызванного файла и аргументы, данные при этом вызове.
+Так как теперь есть переменные окружения, также передаём их дальше.
+Да, теперь все бинарники лежат в /bin, так что в #! надо писать полный путь к
+интерпретатору.
+Глубина рекурсии ограничена пятью, когда превышается, возвращаем -1 и ставим
+errno = ELOOP.
+
+2. mkfifo
+Сделал новый тип для inode и file, mkfifo просто создаёт inode с таким типом.
+Первый open этого файла создаёт соответствующий ему pipe,
+записывает его адрес в inode.
+Если не передан флаг O_NONBLOCK, то open ждёт открытия другого конца (либо того, что
+файл удалят. В линуксе немного не так: если сделать cat fifo, а потом rm fifo, cat
+продолжит ждать открытия другого конца пайпа). Когда другой конец открыли,
+возвращаем file, соответствующий нашему концу пайпа. read и write происходят так же,
+как и для пайпов, разве что добавилась проверка на то, что fifo удалён
+(опять же, линукс этого не делает. Он удаляет файл fifo, но pipe остаётся, пока есть
+открывшие его программы).
+В close не забываем уменьшать счётчик, в скольких процессах этот пайп открыт с нашей
+стороны. Когда оба конца пайпа больше нигде не открыты, удаляем пайп из памяти.
+В unlink ставим на пайп флаг is_deleted, ждём, пока закроются все читающие и пшущие
+дескрипторы, делаем close, который удалит pipe.
+
+3. Пользователи
+По умолчанию есть два пользователя root и user, у обоих нет пароля. Добавить нового
+пользователя (из-под рута, понятное дело) можно командой useradd -m username
+(-m — чтоб создать домашнюю директорию для нового пользователя, по умолчанию у
+пользователя не будет пароля).
+Работают команды chown username:groupname filename, chmod mode filename
+(mode в виде восьмеричного числа), id, ls теперь показывает права на файле и
+его владельца и группу.
+Утилита login логинит пользователя, её теперь запускает init по умолчанию вместо sh.
+login же при успешном вводе пароля запускает программу по умолчанию для заданного
+пользователя (обычно это /bin/sh).
+passwd username устанавливает пароль пользователя (если права текущего пользователя
+это позволяют, конечно). На исполняемом файле passwd стоит бит setuid, так что
+при запуске passwd эффективный uid пользователя меняется на uid владельца
+файла (в данном случае это рут). Благодаря этому passwd может модифицировать
+файл /etc/passwd.
+Чтобы выйти из пользователя, достаточно просто выйти из сессии sh нажав ^D,
+sh закончит
+работу, исполнение перейдёт к init, init снова запустит login.
+
+4. Что ещё добавлено
+errno, переменные окружения, для того, чтоб они работали, пришлось сделать crt0
+(свой _start и __libc_start_main).
 
 Дальше оригинальный Readme:
 
