--- a/README
+++ b/README
@@ -19,17 +19,14 @@ errno = ELOOP.
 Сделал новый тип для inode и file, mkfifo просто создаёт inode с таким типом.
 Первый open этого файла создаёт соответствующий ему pipe,
 записывает его адрес в inode.
-Если не передан флаг O_NONBLOCK, то open ждёт открытия другого конца (либо того, что
-файл удалят. В линуксе немного не так: если сделать cat fifo, а потом rm fifo, cat
-продолжит ждать открытия другого конца пайпа). Когда другой конец открыли,
-возвращаем file, соответствующий нашему концу пайпа. read и write происходят так же,
-как и для пайпов, разве что добавилась проверка на то, что fifo удалён
-(опять же, линукс этого не делает. Он удаляет файл fifo, но pipe остаётся, пока есть
-открывшие его программы).
+Если не передан флаг O_NONBLOCK, то open ждёт открытия другого конца (либо того,
+что файл удалят. В линуксе немного не так: если сделать cat fifo, а потом
+rm fifo, cat продолжит ждать открытия другого конца пайпа). Когда другой конец
+открыли, возвращаем file, соответствующий нашему концу пайпа. read и write
+происходят так же, как и для пайпов.
 В close не забываем уменьшать счётчик, в скольких процессах этот пайп открыт с нашей
 стороны. Когда оба конца пайпа больше нигде не открыты, удаляем пайп из памяти.
-В unlink ставим на пайп флаг is_deleted, ждём, пока закроются все читающие и пшущие
-дескрипторы, делаем close, который удалит pipe.
+В unlink ставим на пайп флаг is_deleted, удаляем соответствующий inode из папки.
 
 3. Пользователи
 По умолчанию есть два пользователя root и user, у обоих нет пароля. Добавить нового
