--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Проект по КС. Пособин Глеб, группа 141.
 
-Добавлено: exec для скриптов, mkfifo, пользователи.
+Добавлено: exec для скриптов, mkfifo, пользователи, /proc, треды, mmap.
 
 1. #!/bin/ls
 Добавлена проверка файла на #! в начале, в таком случае сплитим первую строку
@@ -45,12 +45,55 @@ passwd username устанавливает пароль пользователя
 файла (в данном случае это рут). Благодаря этому passwd может модифицировать
 файл /etc/passwd.
 Чтобы выйти из пользователя, достаточно просто выйти из сессии sh нажав ^D,
-sh закончит
-работу, исполнение перейдёт к init, init снова запустит login.
+sh закончит работу, исполнение перейдёт к init, init снова запустит login.
 
-4. Что ещё добавлено
-errno, переменные окружения, для того, чтоб они работали, пришлось сделать crt0
-(свой _start и __libc_start_main).
+4. Треды
+Как в линуксе сделан вызов clone, создающий копию процесса, и копирующий то,
+что было сказано копировать в аргументах.
+Функция thread_create создаёт стек и дескриптор потока, потом создаёт новый
+поток с помощью clone.
+Есть thread_join и thread_detach.
+Системый вызов exit_group() выходит из всех тредов в группе, exit() только
+из данного процесса. Пользовательский вызов exit() вызывает exit_group().
+
+5. /proc
+Реализован с помощью чего-то похожего на VFS.
+Доступная информация:
+/proc/free_pages — количество свободных страниц в системе,
+/proc/PID/name — имя процесса,
+/proc/PID/state — состояние процесса (sleeping, running, …),
+/proc/PID/memory — количество виртуальной памяти у процесса,
+/proc/PID/pid — pid процесса,
+/proc/PID/uid — uid пользователя,
+/proc/PID/parent — хардлинк на каталог родителя в /proc.
+Есть утилита ps.
+C /proc начнутся проблемы, когда pid процессов перевалит за 10000, т.к.
+номер айнода хранится в short, а номер айнода директории процесса — 6 * PID.
+Практически весь код, отвечающий за /proc, находится в procfs.c.
+
+6. mmap
+При вызове mmap, если mmap не анонимный, считывается
+файл в память по переданному адресу.
+Соответствующие страницы виртуальной памяти помечаются
+заблокированными для записи.
+Когда выходим из процесса, записываем в файл (если не анонимный mmap)
+страницы с флагом dirty (он ставится при записи в страницу).
+То есть, в данном случае два процесса, которые открыли файл shared mmap’ом,
+не будут видеть изменения друг друга.
+mmap сам память не выделяет, поэтому сначала надо делать malloc.
+
+Shared mmap’ы разделяются после форка (см. mmap_pp.c).
+
+munmap() нет, память очищается при выходе из процесса.
+
+7. Ещё
+* errno — не thread-safe.
+* Переменные окружения.
+* Аллокатор памяти в ядре (благодаря ему, например, может быть запущено 700
+  процессов). Похож по устройству на slabы в линуксе.
+* chroot (можно протестировать, сделав `chroot /test/chroot`).
+* Всякие тесты/примеры лежат в /test.
+* Тесты из usertests проходятся успешно.
 
 Дальше оригинальный Readme:
 
